# engine

./: CMakeLists.txt  LICENSE.MIT  README.md  main.cpp
res/shaders/: frag.glsl  vertex.glsl
src/: camera.cpp  camera.h  resource_manager.cpp  resource_manager.h  resource_system.cpp  resource_system.h  type.h
src/shader/: shader.cpp  shader.h  shader_program.cpp  shader_program.h
